make currentText the USER property for QComboBox

QItemDelegate takes the USER property as the value to be set using
model->setData(). The text is what is expected.

follow-up to b1b87a73012342dc1619a8e907ea9954d59ca564 which in Qt 4.8.0
broke the interaction between QComboBox and QItemDelegate used by
QDataWidgetMapper and item views.

Task-number: QTBUG-26501
Change-Id: I005a0a6af5265ee22baf417957e520992d16d6e1
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

cregit: 816c5540179362500dfc175b77f05abf3ef25233 https://github.com/qt/qtbase/commit/816c5540179362500dfc175b77f05abf3ef25233